@@ -29,6 +29,8 @@ preSigil-0.9.6
   New Features
     - create sgc-nav.css stylesheet for nav and allow templates in Prefs Dir for user to control it 
     - Add General Setting to allow user to set own temporary directory location
+    - Add Qt Stylesheet support - Recognize and load "qt_styles.qss" file if stored in Sigil Preferences folder
+
 
 Sigil-0.9.5
    Bug Fixes
